# Lamina1

./: CMakeLists.txt  lamina_core.cpp  lamina_core.hpp  lmx.cpp  main.cpp
.github/workflows/: release.yml
compiler/: CMakeLists.txt  assembler.cpp  assembler.hpp  ast.cpp  ast.hpp  ast_printer.cpp  ast_printer.hpp  error.cpp  error.hpp  hir.cpp  hir.hpp  lexer.cpp  lexer.hpp  mir.cpp  mir.hpp  mir_builder.cpp  mir_builder.hpp  mir_printer.cpp  mir_printer.hpp  parser.cpp  parser.hpp
docs/: binary.md  mir.md
include/: lamina_core.h  lmx.h  lmx_debug.hpp  lmx_export.hpp
runtime/: CMakeLists.txt  binary.cpp  binary.hpp  gc.cpp  gc.hpp  opcode.hpp  vm.cpp  vm.hpp
runtime/object/: code.cpp  code.hpp  code_module.cpp  code_module.hpp  fraction.cpp  fraction.hpp  object.cpp  object.hpp  string.cpp  string.hpp  value.cpp  value.hpp
runtime/tests/: test_main.cpp  test_string.cpp
std/: io.lm  stdlib.lm
utils/: utils.hpp
