add_library(laminac
    ast.cpp
    ast_printer.cpp
    error.cpp
    lexer.cpp
    parser.cpp
        hir.cpp
        hir.hpp
        mir.cpp
        mir.hpp
        mir_builder.cpp
        mir_builder.hpp
        mir_printer.cpp
        mir_printer.hpp
        assembler.cpp
        assembler.hpp
)